add claroCmd class for claroline command. This should progrssively replace claroButton in most of the case.

--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -253,6 +253,23 @@ h3{	font-size: 110%; }
     font-style: italic;
 }
 
+/******************************************************************************
+	CLAROLINE COMMAD LINKS
+ ******************************************************************************/
+ 
+.claroCmd{
+		font-size: smaller;
+		font-weight: bold;
+		text-decoration: underline;
+}
+
+.claroCmdDisabled {
+		color: Gray;
+		font-size: smaller;
+		font-weight: bold;
+		text-decoration: none;
+}
+
 
 /******************************************************************************
                              CLAROLINE TABLE
