Add clarocmd class

--- a/claroline/css/corporate.css
+++ b/claroline/css/corporate.css
@@ -318,6 +318,25 @@ h3{	font-size: 110%; }
 }
 
 /******************************************************************************
+	CLAROLINE COMMAND LINKS
+ ******************************************************************************/
+ 
+.claroCmd
+{
+		font-size: smaller;
+		font-weight: bold;
+		text-decoration: underline;
+}
+
+.claroCmdDisabled 
+{
+		color: Gray;
+		font-size: smaller;
+		font-weight: bold;
+		text-decoration: none;
+}
+
+/******************************************************************************
                              CLAROLINE TABLE
  ******************************************************************************/
 
