Minor : Missing N in a comment

--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -254,7 +254,7 @@ h3{	font-size: 110%; }
 }
 
 /******************************************************************************
-	CLAROLINE COMMAD LINKS
+	CLAROLINE COMMAND LINKS
  ******************************************************************************/
  
 .claroCmd{
