--- a/claroline/css/corporate.css
+++ b/claroline/css/corporate.css
@@ -375,6 +375,26 @@ h3{	font-size: 110%; }
 
 .claroTable .headerX th,  .claroTable th.headerX { background-color: #c7d0d7; }
 
+/* extension of claroTable class for Image Viewer */
+.claroTable tr th.toolbar {
+	background: white;
+}
+
+.claroTable tr.toolbar th.prev{
+	text-align:left;
+	font-weight: normal;
+}
+
+.claroTable tr.toolbar th.title{
+	font-weight:bold;
+	text-align:center;
+}
+
+.claroTable tr.toolbar th.next{
+	text-align:right;
+	font-weight: normal;
+}
+
 .emphaseLine tbody td {
 	border-bottom: solid #98AAB1 1px ;
 }
