remove wrong character

--- a/claroline/css/claroline142.css
+++ b/claroline/css/claroline142.css
@@ -369,7 +369,7 @@ h3{	font-size: 110%; }
 }
 
 .claroTable .headerX th,  .claroTable th.headerX {
-	background-color: #E6E6E6;8:02 29/03/2005
+	background-color: #E6E6E6;
 }
 
 /* extension of claroTable class for Image Viewer */
