--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -7,6 +7,8 @@ body
 	font-family: arial, helvetica, sans-serif;
 	color:#333333;
 	background-color: #fff;
+	padding: 1px;
+	margin: 1px;
 }
 
 a:link, a:active, a:visited 
@@ -94,7 +96,8 @@ h3{
 
 #userBanner #userName
 {
-	 font-size: 115%;
+	 font-size: 110%;
+	 font-weight: normal;
 	 margin: 0;
 }
 
@@ -204,7 +207,9 @@ h3{
                              CLAROLINE BODY
  ******************************************************************************/
 
-#claroBody{}
+#claroBody{
+
+}
 
 
 /******************************************************************************
