--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -239,7 +239,6 @@ h3{
 	text-align: center;
 }
 
-
 #footer #poweredBy
 {
     clear: both;
@@ -475,10 +474,19 @@ a:visited.invisible
 	example : 'today' in the agenda
 */
 .highlight {
- color: #000066;
+ color: #DDDEBC;
  font-weight: bold;
 }
 
+/* 'hotItem' is used when something needs to be notified as new on the platform since the last login
+    to the user
+*/
+.hotItem,
+.hotItem a
+{
+ color: #FF00CC;
+ font-weight: bold;
+}
 
 /*
  * 'rightMenu' is mainly use in the platform home page
