--- a/claroline/css/orangejuice.css
+++ b/claroline/css/orangejuice.css
@@ -439,6 +439,16 @@ a:visited.invisible{
 	color: #FFB848;
 }
 
+/* 'hotItem' is used when something needs to be notified as new on the platform since the last login
+    to the user
+*/
+.hotItem,
+.hotItem a
+{
+ color: #FF00CC;
+ font-weight: bold;
+}
+
 /*
  * 'rightMenu' is mainly use in the platform home page
  */
