--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -474,7 +474,7 @@ a:visited.invisible
 	example : 'today' in the agenda
 */
 .highlight {
- color: #DDDEBC;
+ color: #FFB848;
  font-weight: bold;
 }
 
