--- a/claroline/css/pure.css
+++ b/claroline/css/pure.css
@@ -1,4 +1,4 @@
-/******************************************************************************
+it/******************************************************************************
                               MAIN HTML TAGS STYLE
  ******************************************************************************/
 
@@ -291,6 +291,30 @@ th .claroCmdDisabled
 	text-decoration: none;
 }
 
+/******************************************************************************
+                             CLAROLINE ITEM
+ ******************************************************************************/
+
+/*
+ * Classes family to emphase some item in the tool interface.
+ * These two classes has to be used together to work correctly.
+ *
+ * SOME EXAMPLES :
+ *
+ *  <a href="0" class="item"><img src="icon.gif" />lorem ipsum</a><br />
+ *  <a href="0" class="item hot"><img src="icon.gif" />lorem ipsum</a><br />
+ *
+ *  <span class="item"><img src="icon.gif" />lorem ipsum</span><br>
+ *  <span class="item hot"><img src="icon.gif" />lorem ipsum<br>
+ *
+ *  <ul style="list-style-image:url(icon.gif);list-style-position:inside">
+ *   <li class="item">lorem ipsum</li>
+ *   <li class="item hot">lorem ipsum</li>
+ *  </ul>
+ */
+
+.item {padding-left:16px}
+.hot {background:url(../img/hot.gif) no-repeat}
 
 /******************************************************************************
                              CLAROLINE TABLE
