--- a/claroline/css/corporate.css
+++ b/claroline/css/corporate.css
@@ -208,7 +208,6 @@ h3{	font-size: 110%; }
 	height: 1em;
 	background-color: #E5E5E5;
 	border: none;
-	font-size: 90%;
 	padding-bottom: 5px;
 }
 
@@ -230,16 +229,23 @@ h3{	font-size: 110%; }
 	display: none;
 }
 
-#breadcrumbLine #breadcrumbTrail
+#breadcrumbLine .breadcrumbTrail
 {
 	float: left;
 }
 
 #breadcrumbLine #toolViewOption
 {
+	font-size: 90%;
 	float: right;
 	text-align: right;
 }
+
+.breadcrumbTrail 
+{
+	font-size: 90%;
+}
+
 /******************************************************************************
                              CLAROLINE BODY
  ******************************************************************************/
