--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -184,7 +184,6 @@ h3{
 #breadcrumbLine
 {
 	border: none;
-	font-size: 80%;
 }
 
 #breadcrumbLine hr
@@ -192,7 +191,7 @@ h3{
 	display: none;
 }
 
-#breadcrumbLine #breadcrumbTrail
+#breadcrumbLine .breadcrumbTrail
 {
 	float: left;
 }
@@ -201,6 +200,13 @@ h3{
 {
 	float: right;
 	text-align: right;
+	font-size: 80%;
+}
+
+
+.breadcrumbTrail
+{
+	font-size: 80%;
 }
 
 /******************************************************************************
