add class comment in css

--- a/claroline/css/claroline142.css
+++ b/claroline/css/claroline142.css
@@ -520,3 +520,10 @@ claroRightMenu a:hover {
     color:gray
 }
 
+/*
+ * 'comment' is used for comment of documents, forum description, ...
+ */
+
+.comment {
+    font-size: smaller;
+}
