--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -566,3 +566,11 @@ claroRightMenu a:hover {
 .claroToolTitle {
 	padding-top: 5px;
 }
+
+/*
+ * 'comment' is used for comment of documents, forum description, ...
+ */
+
+.comment {
+    font-size: smaller;
+}
