--- a/claroline/css/orangejuice.css
+++ b/claroline/css/orangejuice.css
@@ -495,3 +495,11 @@ a:visited.invisible{
 .HelpText {
     color:gray
 }
+
+/*
+ * 'comment' is used for comment of documents, forum description, ...
+ */
+
+.comment {
+    font-size: smaller;
+}
