--- a/claroline/css/pinklaro.css
+++ b/claroline/css/pinklaro.css
@@ -517,3 +517,11 @@ claroRightMenu a:hover {
 .HelpText {
     color:gray
 }
+
+/*
+ * 'comment' is used for comment of documents, forum description, ...
+ */
+
+.comment {
+    font-size: smaller;
+}
