--- a/claroline/css/pure.css
+++ b/claroline/css/pure.css
@@ -319,10 +319,8 @@ th .claroCmdDisabled
  *  </ul>
  */
 
-li.item {padding-left:16px}
-li.hot {background:url(../img/hot.gif) no-repeat}
-.item img {padding-left:16px}
-.hot img {background:url(../img/hot.gif) no-repeat}
+.item {padding-left:16px}
+.hot {background:url(../img/hot.gif) no-repeat}
 
 /******************************************************************************
                              CLAROLINE TABLE
